src/Reports/Reports/docs/v1.0-beta/Get-MgReportSkype.md
---
external help file:
Module Name: Microsoft.Graph.Reports
online version: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.reports/get-mgreportskype
schema: 2.0.0
---

# Get-MgReportSkype

## SYNOPSIS
Invoke function getSkypeForBusinessActivityUserDetail

## SYNTAX

### Get (Default)
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get1
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get10
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get11
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get12
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get13
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get2
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get3
```
Get-MgReportSkype -Date <DateTime> [<CommonParameters>]
```

### Get31
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get32
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get33
```
Get-MgReportSkype -Date <DateTime> [<CommonParameters>]
```

### Get4
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get5
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get6
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get7
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get8
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### Get9
```
Get-MgReportSkype -Period <String> [<CommonParameters>]
```

### GetViaIdentity
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity1
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity10
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity11
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity12
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity13
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity2
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity3
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity31
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity32
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity33
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity4
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity5
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity6
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity7
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity8
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

### GetViaIdentity9
```
Get-MgReportSkype -InputObject <IReportsIdentity> [<CommonParameters>]
```

## DESCRIPTION
Invoke function getSkypeForBusinessActivityUserDetail

## EXAMPLES

### Example 1: {{ Add title here }}
```powershell
PS C:\> {{ Add code here }}

{{ Add output here }}
```

{{ Add description here }}

### Example 2: {{ Add title here }}
```powershell
PS C:\> {{ Add code here }}

{{ Add output here }}
```

{{ Add description here }}

## PARAMETERS

### -Date
Usage: date={date}

```yaml
Type: System.DateTime
Parameter Sets: Get3, Get33
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject
Identity Parameter
To construct, see NOTES section for INPUTOBJECT properties and create a hash table.

```yaml
Type: Microsoft.Graph.PowerShell.Models.IReportsIdentity
Parameter Sets: GetViaIdentity, GetViaIdentity1, GetViaIdentity10, GetViaIdentity11, GetViaIdentity12, GetViaIdentity13, GetViaIdentity2, GetViaIdentity3, GetViaIdentity31, GetViaIdentity32, GetViaIdentity33, GetViaIdentity4, GetViaIdentity5, GetViaIdentity6, GetViaIdentity7, GetViaIdentity8, GetViaIdentity9
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -Period
Usage: period={period}

```yaml
Type: System.String
Parameter Sets: Get, Get1, Get10, Get11, Get12, Get13, Get2, Get31, Get32, Get4, Get5, Get6, Get7, Get8, Get9
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### Microsoft.Graph.PowerShell.Models.IReportsIdentity

## OUTPUTS

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessActivityCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessActivityUserCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessActivityUserDetail

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessDeviceUsageDistributionUserCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessDeviceUsageUserCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessDeviceUsageUserDetail

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessOrganizerActivityCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessOrganizerActivityMinuteCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessOrganizerActivityUserCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessParticipantActivityCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessParticipantActivityMinuteCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessParticipantActivityUserCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessPeerToPeerActivityCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessPeerToPeerActivityMinuteCounts

### Microsoft.Graph.PowerShell.Models.IMicrosoftGraphSkypeForBusinessPeerToPeerActivityUserCounts

## NOTES

ALIASES

COMPLEX PARAMETER PROPERTIES

To create the parameters described below, construct a hash table containing the appropriate properties. For information on hash tables, run Get-Help about_Hash_Tables.


INPUTOBJECT <IReportsIdentity>: Identity Parameter
  - `[ApplicationSignInDetailedSummaryId <String>]`: key: id of applicationSignInDetailedSummary
  - `[CredentialUserRegistrationDetailsId <String>]`: key: id of credentialUserRegistrationDetails
  - `[Date <DateTime?>]`: Usage: date={date}
  - `[DeviceManagementCachedReportConfigurationId <String>]`: key: id of deviceManagementCachedReportConfiguration
  - `[DeviceManagementExportJobId <String>]`: key: id of deviceManagementExportJob
  - `[DeviceManagementReportScheduleId <String>]`: key: id of deviceManagementReportSchedule
  - `[DirectoryAuditId <String>]`: key: id of directoryAudit
  - `[EndDateTime <DateTime?>]`: Usage: endDateTime={endDateTime}
  - `[Filter <String>]`: Usage: filter={filter}
  - `[GroupId <String>]`: Usage: groupId={groupId}
  - `[IncludedUserRoles <String>]`: Usage: includedUserRoles={includedUserRoles}
  - `[IncludedUserTypes <String>]`: Usage: includedUserTypes={includedUserTypes}
  - `[Period <String>]`: Usage: period={period}
  - `[PrintUsageByPrinterId <String>]`: key: id of printUsageByPrinter
  - `[PrintUsageByUserId <String>]`: key: id of printUsageByUser
  - `[PrinterId <String>]`: Usage: printerId={printerId}
  - `[ProvisioningObjectSummaryId <String>]`: key: id of provisioningObjectSummary
  - `[RestrictedSignInId <String>]`: key: id of restrictedSignIn
  - `[SignInId <String>]`: key: id of signIn
  - `[Skip <Int32?>]`: Usage: skip={skip}
  - `[SkipToken <String>]`: Usage: skipToken={skipToken}
  - `[StartDateTime <DateTime?>]`: Usage: startDateTime={startDateTime}
  - `[Top <Int32?>]`: Usage: top={top}
  - `[UserCredentialUsageDetailsId <String>]`: key: id of userCredentialUsageDetails
  - `[UserId <String>]`: Usage: userId={userId}

## RELATED LINKS

