src/Reports/Reports/docs/v1.0/Get-MgReportSkype.md
---
external help file: Microsoft.Graph.Reports-help.xml
Module Name: Microsoft.Graph.Reports
online version: https://docs.microsoft.com/en-us/powershell/module/microsoft.graph.reports/get-mgreportskype
schema: 2.0.0
---

# Get-MgReportSkype

## SYNOPSIS
Invoke function getSkypeForBusinessActivityCounts

## SYNTAX

### Get14 (Default)
```
Get-MgReportSkype -Period <String> -InputObject <IReportsIdentity> -OutFile <String> [-PassThru]
 [<CommonParameters>]
```

### Get30
```
Get-MgReportSkype -Period <String> -InputObject <IReportsIdentity> -OutFile <String> [-PassThru]
 [<CommonParameters>]
```

### Get29
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get28
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get27
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get26
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get25
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get24
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get23
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get22
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get21
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get19
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get18
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get17
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get15
```
Get-MgReportSkype -Period <String> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get20
```
Get-MgReportSkype -Date <DateTime> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get16
```
Get-MgReportSkype -Date <DateTime> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity30
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity29
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity28
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity27
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity26
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity25
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity24
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity23
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity22
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity21
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity20
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity19
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity18
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity17
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### GetViaIdentity16
```
Get-MgReportSkype -InputObject <IReportsIdentity> -OutFile <String> [-PassThru] [<CommonParameters>]
```

### Get14 (Default)
```
Get-MgReportSkype -Period <String> -InputObject <IReportsIdentity> -OutFile <String> [-PassThru]
 [<CommonParameters>]
```

### Get30
```
Get-MgReportSkype -Period <String> -InputObject <IReportsIdentity> -OutFile <String> [-PassThru]
 [<CommonParameters>]
```

## DESCRIPTION
Invoke function getSkypeForBusinessActivityCounts

## EXAMPLES

## PARAMETERS

### -Date
Usage: date={date}

```yaml
Type: DateTime
Parameter Sets: Get20, Get16
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject
Identity Parameter
To construct, see NOTES section for INPUTOBJECT properties and create a hash table.

```yaml
Type: IReportsIdentity
Parameter Sets: Get14, Get30, GetViaIdentity30, GetViaIdentity29, GetViaIdentity28, GetViaIdentity27, GetViaIdentity26, GetViaIdentity25, GetViaIdentity24, GetViaIdentity23, GetViaIdentity22, GetViaIdentity21, GetViaIdentity20, GetViaIdentity19, GetViaIdentity18, GetViaIdentity17, GetViaIdentity16
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByValue)
Accept wildcard characters: False
```

### -OutFile
Path to write output file to

```yaml
Type: String
Parameter Sets: Get14, Get30, Get29, Get28, Get27, Get26, Get25, Get24, Get23, Get22, Get21, Get19, Get18, Get17, Get15, Get20, Get16, GetViaIdentity30, GetViaIdentity29, GetViaIdentity28, GetViaIdentity27, GetViaIdentity26, GetViaIdentity25, GetViaIdentity24, GetViaIdentity23, GetViaIdentity22, GetViaIdentity21, GetViaIdentity20, GetViaIdentity19, GetViaIdentity18, GetViaIdentity17, GetViaIdentity16
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru
Returns true when the command succeeds

```yaml
Type: SwitchParameter
Parameter Sets: Get14, Get30, Get29, Get28, Get27, Get26, Get25, Get24, Get23, Get22, Get21, Get19, Get18, Get17, Get15, Get20, Get16, GetViaIdentity30, GetViaIdentity29, GetViaIdentity28, GetViaIdentity27, GetViaIdentity26, GetViaIdentity25, GetViaIdentity24, GetViaIdentity23, GetViaIdentity22, GetViaIdentity21, GetViaIdentity20, GetViaIdentity19, GetViaIdentity18, GetViaIdentity17, GetViaIdentity16
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Period
Usage: period={period}

```yaml
Type: String
Parameter Sets: Get14, Get30, Get29, Get28, Get27, Get26, Get25, Get24, Get23, Get22, Get21, Get19, Get18, Get17, Get15
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### Microsoft.Graph.PowerShell.Models.IReportsIdentity

## OUTPUTS

### System.Boolean

## NOTES

ALIASES

COMPLEX PARAMETER PROPERTIES

To create the parameters described below, construct a hash table containing the appropriate properties. For information on hash tables, run Get-Help about_Hash_Tables.


INPUTOBJECT <IReportsIdentity>: Identity Parameter
  - `[ApplicationSignInDetailedSummaryId <String>]`: key: id of applicationSignInDetailedSummary
  - `[CredentialUserRegistrationDetailsId <String>]`: key: id of credentialUserRegistrationDetails
  - `[Date <DateTime?>]`: Usage: date={date}
  - `[DeviceManagementCachedReportConfigurationId <String>]`: key: id of deviceManagementCachedReportConfiguration
  - `[DeviceManagementExportJobId <String>]`: key: id of deviceManagementExportJob
  - `[DeviceManagementReportScheduleId <String>]`: key: id of deviceManagementReportSchedule
  - `[DirectoryAuditId <String>]`: key: id of directoryAudit
  - `[EndDateTime <DateTime?>]`: Usage: endDateTime={endDateTime}
  - `[Filter <String>]`: Usage: filter={filter}
  - `[GroupId <String>]`: Usage: groupId={groupId}
  - `[IncludedUserRoles <String>]`: Usage: includedUserRoles={includedUserRoles}
  - `[IncludedUserTypes <String>]`: Usage: includedUserTypes={includedUserTypes}
  - `[Period <String>]`: Usage: period={period}
  - `[PrintUsageByPrinterId <String>]`: key: id of printUsageByPrinter
  - `[PrintUsageByUserId <String>]`: key: id of printUsageByUser
  - `[PrinterId <String>]`: Usage: printerId={printerId}
  - `[ProvisioningObjectSummaryId <String>]`: key: id of provisioningObjectSummary
  - `[RestrictedSignInId <String>]`: key: id of restrictedSignIn
  - `[SignInId <String>]`: key: id of signIn
  - `[Skip <Int32?>]`: Usage: skip={skip}
  - `[SkipToken <String>]`: Usage: skipToken={skipToken}
  - `[StartDateTime <DateTime?>]`: Usage: startDateTime={startDateTime}
  - `[Top <Int32?>]`: Usage: top={top}
  - `[UserCredentialUsageDetailsId <String>]`: key: id of userCredentialUsageDetails
  - `[UserId <String>]`: Usage: userId={userId}

## RELATED LINKS
